--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -26,10 +26,7 @@ jobs:
       - name: Run Python script
         env:
           SSH_INFO: ${{ secrets.SSH_INFO }}
-          PUSHPLUS_TOKEN: ${{ secrets.PUSHPLUS_TOKEN }}
-          MAIL: ${{ secrets.MAIL }}
-          PUSH: ${{ secrets.PUSH }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          COMMAND: ${{ secrets.COMMAND }}
+          PUSHURL: ${{ secrets.PUSHURL }}
           
         run: python run.py
